ec2 setup finished

--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -1,7 +1,7 @@
     <!doctype html>
-    <title>Cats</title>
+    <title>Art-by-Era Classifier</title>
     {% if prediction %}
-    <h2>It is a {{ prediction }}!</h2>
+    <h2>Movement: {{ prediction }}!</h2>
     {% endif %}
     {% if filename %}
     <h2>{{ filename }}</h2>
