--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
     <!doctype html>
-    <title>Cats</title>
-    <h2>Upload an image and we'll tell you if it is most like a domestic cat, a wild cat, or a toy cat</h1>
+    <title>Art-by-Era Classifier</title>
+    <h2>Upload an artwork  and we'll tell you its era and movement</h1>
     <form method=post enctype=multipart/form-data>
       <input type=file name=file>
       <input type=submit value=Upload>
