--- a/app/templates/displayFile.html
+++ b/app/templates/displayFile.html
@@ -1,5 +1,5 @@
     <!doctype html>
-    <title>Cats</title>
+    <title>Art-by-Era Classifier</title>
     <h2>It is a something!</h2>
     {% if filename %}
     <h2>{{ filename }}</h2>
