MORE UI changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 		<title>Art By Era</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/home/ubuntu/cs121/app/templates/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -44,21 +44,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-mobile"><img src="/home/ubuntu/cs121/app/templates/images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Our First Goal...</h3>
 							<p>We wanted to make art stupid simple to understand for regular folk, like us.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-code"><img src="/home/ubuntu/cs121/app/templates/images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>... And Our Second ...</h3>
 							<p>To make power this simple user experience by not-so-simple deep learning algorithms.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-signal"><img src="/home/ubuntu/cs121/app/templates/images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>... And Finally</h3>
 							<p>We want to deliver data that might not just be interesting to regular folk, but also to art historians, and the like! Hopefully you enjoy our app.</p>
@@ -252,11 +252,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/home/ubuntu/cs121/app/templates/assets/js/jquery.min.js"></script>
+			<script src="/home/ubuntu/cs121/app/templates/assets/js/browser.min.js"></script>
+			<script src="/home/ubuntu/cs121/app/templates/assets/js/breakpoints.min.js"></script>
+			<script src="/home/ubuntu/cs121/app/templates/assets/js/util.js"></script>
+			<script src="/home/ubuntu/cs121/app/templates/assets/js/main.js"></script>
 
 	</body>
 </html>
