attempted bug fixes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,9 +20,13 @@
 				<p>Upload an artwork and we'll tell you its movement and era!</a></p>
 				<p>There are only two steps!</p>
 				<form method=post enctype=multipart/form-data>
-					<p>1. <input type=file value=Upload></p>
+					<!---<p>1. <input type=file value=Upload></p>
 					<p></p>
-					<p>2. <input type=submit value=Submit></p>
+					<p>2. <input type=submit value=Submit></p>-->
+					 <p>1. <input type=file value=file></p>
+                                        <p></p>
+                                        <p>2. <input type=submit value=Upload></p>
+
 				</form>
 			  
 			</div>
