--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,122 +1,8 @@
-<!doctype html>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Art By Era</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
-	</head>
-	<body class="is-preload">
-
-		<!-- Header -->
-			<div id="header">
-				<span class="logo icon fa-paper-plane-o"></span>
-				<h1>Hi. This is Art-By-Era.</h1>
-				<p>Upload an artwork and we'll tell you its movement and era!</a></p>
-				<p>There are only two steps!</p>
-				<form method=post enctype=multipart/form-data>
-					<!---<p>1. <input type=file value=Upload></p>
-					<p></p>
-					<p>2. <input type=submit value=Submit></p>-->
-					 <p>1. <input type=file value=file></p>
-                                        <p></p>
-                                        <p>2. <input type=submit value=Upload></p>
-
-				</form>
-			  
-			</div>
-
-		<!-- Main -->
-			<div id="main">
-
-				<header class="major container medium">
-					<h2>Let's
-					<br />
-					make art
-					<br />
-					timeless</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
-				</header>
-
-				<div class="box alt container">
-					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="{{ url_for('static', filename='assets/images/pic01.jpg') }}" alt="" /></a>
-						<div class="content">
-							<h3>Our First Goal...</h3>
-							<p>We wanted to make art stupid simple to understand for regular folk, like us.</p>
-						</div>
-					</section>
-					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="{{ url_for('static', filename='assets/images/pic02.jpg') }}" alt="" /></a>
-						<div class="content">
-							<h3>... And Our Second ...</h3>
-							<p>To make power this simple user experience by not-so-simple deep learning algorithms.</p>
-						</div>
-					</section>
-					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="{{ url_for('static', filename='assets/images/pic03.jpg') }}" alt="" /></a>
-						<div class="content">
-							<h3>... And Finally</h3>
-							<p>We want to deliver data that might not just be interesting to regular folk, but also to art historians, and the like! Hopefully you enjoy our app.</p>
-						</div>
-					</section>
-				</div>
-			</div>
-
-		<!-- Footer -->
-			<div id="footer">
-				<div class="container medium">
-
-					<header class="major last">
-						<h2>Questions or comments?</h2>
-					</header>
-
-					<p>A little criticism never hurt anybody. Let us know your!</p>
-
-					<form method="post" action="#">
-						<div class="row">
-							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-
-					<ul class="icons">
-						<li><a href="https://github.com/cadecur/art-by-era-ec2" class="icon fa-github"><span class="label">Github</span></a></li>
-					</ul>
-
-					<ul class="copyright">
-						<li>&copy; Art-By-Era. All rights reserved.</li>
-					</ul>
-
-				</div>
-			</div>
-
-		<!-- Scripts -->
-			<script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
-			<script src="{{ url_for('static', filename='assets/js/browser.min.js') }}"></script>
-			<script src="{{ url_for('static', filename='assets/js/breakpoints.min.js') }}"></script>
-			<script src="{{ url_for('static', filename='assets/js/util.js') }}"></script>
-			<script src="{{ url_for('static', filename='assets/js/main.js') }}"></script>
-
-	</body>
-</html>
+    <!doctype html>
+    <title>Cats</title>
+    <h2>Upload an image and we'll tell you if it is most like a domestic cat, a wild cat, or a toy cat</h1>
+    <link rel="stylesheet' href="{{ url_for('static', filename='assets/css/main.css') }}" />
+    <form method=post enctype=multipart/form-data>
+      <input type=file name=file>
+      <input type=submit value=Upload>
+    </form>
