--- a/app/templates/indexBack.html
+++ b/app/templates/indexBack.html
@@ -18,18 +18,16 @@
 				<span class="logo icon fa-paper-plane-o"></span>
 				<h1>Hi. This is Art-By-Era.</h1>
 				<p>Upload an artwork and we'll tell you its movement and era!</a></p>
-				<p>There are only two steps!</p>
-				<form method=post enctype=multipart/form-data>
-					<!---<p>1. <input type=file value=Upload></p>
-					<p></p>
-					<p>2. <input type=submit value=Submit></p>-->
-					 <p>1. <input type=file value=file></p>
-                                        <p></p>
-                                        <p>2. <input type=submit value=Upload></p>
-
-				</form>
-			  
+				<p>There are only two steps!</p>  
 			</div>
+
+			<form method=post enctype=multipart/form-data>
+				<!---<p>1. <input type=file value=Upload></p>
+				<p></p>
+				<p>2. <input type=submit value=Submit></p>-->
+				<input type=file value=file>
+				<input type=submit value=Upload>
+			</form>
 
 		<!-- Main -->
 			<div id="main">
@@ -79,7 +77,7 @@
 						<h2>Questions or comments?</h2>
 					</header>
 
-					<p>A little criticism never hurt anybody. Let us know your!</p>
+					<p>A little criticism never hurt anybody. Let us know your thoughts!</p>
 
 					<form method="post" action="#">
 						<div class="row">
