--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,20 +1,8 @@
-<!doctype html>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-	<head>
-		<title>Art By Era</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
-  </head>
-
-  <form method=post enctype=multipart/form-data>
-    <!---<p>1. <input type=file value=Upload></p>
-    <p></p>
-    <p>2. <input type=submit value=Submit></p>-->
-    <input type=file value=file>
-    <input type=submit value=Upload>
-  </form>
+    <!doctype html>
+    <title>Cats</title>
+    <h2>Upload an image and we'll tell you if it is most like a domestic cat, a wild cat, or a toy cat</h1>
+    <link rel="stylesheet' href="{{ url_for('static', filename='assets/css/main.css') }}" />
+    <form method=post enctype=multipart/form-data>
+      <input type=file name=file>
+      <input type=submit value=Upload>
+    </form>
