--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
     <!doctype html>
     <title>Cats</title>
     <h2>Upload an image and we'll tell you if it is most like a domestic cat, a wild cat, or a toy cat</h1>
-    <link rel="stylesheet' href="{{ url_for('static', filename='assets/css/main.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
     <form method=post enctype=multipart/form-data>
       <input type=file name=file>
       <input type=submit value=Upload>
