--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,14 @@
           <p>Upload an artwork and we'll tell you its movement and era!</a></p>
           <p>There are only two steps!</p>  
         </div>
+        <center>
         <form method=post enctype=multipart/form-data>
           <input type=file name=file>
           <br />
+          <br />
           <input type=submit value=Upload>
         </form>
+       </center>
       <!-- Main -->
         <div id="main">
   
