--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,10 +16,10 @@
         <form method=post enctype=multipart/form-data>
           <br />
           <br />
-          <input type=file name=file>
+          1. <input type=file name=file>
           <br />
           <br />
-          <input type=submit value=Upload>
+          2. <input type=submit value=Upload>
         </form>
        </center>
       <!-- Main -->
