--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,5 @@
     <!doctype html>
-    <title>Cats</title>
-    <h2>Upload an image and we'll tell you if it is most like a domestic cat, a wild cat, or a toy cat</h1>
+    <title>Art By Era</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 
     <body class="is-preload">
