--- a/app/templates/displayFile.html
+++ b/app/templates/displayFile.html
@@ -1,5 +1,9 @@
     <!doctype html>
     <title>Art-by-Era Classifier</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
+
+    <body class="is-preload">
+
     <h2>It is a something!</h2>
     {% if filename %}
     <h2>{{ filename }}</h2>
