--- a/app/templates/displayFile.html
+++ b/app/templates/displayFile.html
@@ -8,5 +8,5 @@
     {% if filename %}
     <h2>{{ filename }}</h2>
     <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
-    <img src="/static/{{ url_for('get_file', filename=filename) }}">
+    <center><img src="/static/{{ url_for('get_file', filename=filename) }}"></center>
     {% endif %}
