--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -10,7 +10,7 @@
     {% if filename %}
     <h2>{{ filename }}</h2>
     <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
-    <center><img src="/static/{{ url_for('get_file', filename=filename) }}"></center>
+    <img src="/static/{{ url_for('get_file', filename=filename) }}">
     {% endif %}
     <div id="footer">
         <div class="container medium">
