--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -6,12 +6,13 @@
         {% if prediction %}
         <h2>Movement: {{ prediction }}!</h2>
         {% endif %}
+        {% if filename %}
+        <h2>{{ filename }}</h2>
+        <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
+        <center><img src="/static/{{ url_for('get_file', filename=filename) }}"></center>
+        {% endif %}
     </div>
-    {% if filename %}
-    <h2>{{ filename }}</h2>
-    <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
-    <img src="/static/{{ url_for('get_file', filename=filename) }}">
-    {% endif %}
+
     <div id="footer">
         <div class="container medium">
 
