--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -13,6 +13,10 @@
         {% endif %}
     </div>
 
+    <header class="major container medium">
+        <a href="#" class="image icon fa-signal"><h2>Try <br> Another <br> Artwork!</h2></a>
+    </header>
+
     <div id="footer">
         <div class="container medium">
 
