--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,7 +48,7 @@
               <a href="#" class="image icon fa-code"><img src="{{ url_for('static', filename='assets/images/pic02.jpg') }}" alt="" /></a>
               <div class="content">
                 <h3>... And Our Second ...</h3>
-                <p>To make power this simple user experience by not-so-simple deep learning algorithms.</p>
+                <p>To power this simple user experience by not-so-simple deep learning algorithms.</p>
               </div>
             </section>
             <section class="feature left">
