--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -2,6 +2,7 @@
     <title>Art By Era</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 
+    
     <div id="header">
         {% if prediction %}
         <h2>Movement: {{ prediction }}!</h2>
@@ -14,7 +15,7 @@
     </div>
 
     <header class="major container medium">
-        <a href="#" class="image icon fa-signal"><h2>Try <br> Another <br> Artwork!</h2></a>
+        <a href="#"><h2>Try <br> Another <br> Artwork!</h2></a>
     </header>
 
     <div id="footer">
