--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -15,13 +15,9 @@
     </div>
 
     <header class="major container medium">
-        <a href="#"><h2>Try <br> Another <br> Artwork!</h2></a>
+        <a href="/app/templates/index.html"><h2>Try <br> Another <br> Artwork!</h2></a>
     </header>
-    <br> 
-    <br> 
-    <br> 
-    <br> 
-    <br> 
+    <br> <br> <br> <br> <br> 
 
     <div id="footer">
         <div class="container medium">
