--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -15,7 +15,7 @@
     </div>
 
     <header class="major container medium">
-        <link href="/app/templates/index.html" /><h2>Try <br> Another <br> Artwork!</h2>
+        <a href="javascript:history.back()"><h2>Try <br> Another <br> Artwork!</h2></a>
     </header>
     <br> <br> <br> <br> <br> 
 
