--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -8,9 +8,9 @@
         <h2>Movement: {{ prediction }}!</h2>
         {% endif %}
         {% if filename %}
-        <h2>{{ filename }}</h2>
+        <h2>{{ 'Were we correct?' }}</h2>
         <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
-        <center><img src="/static/{{ url_for('get_file', filename=filename) }}" width = 350  height = auto></center>
+        <center><img src="/static/{{ url_for('get_file', filename=filename) }}" width = auto  height = 400></center>
         {% endif %}
     </div>
 
