--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -7,6 +7,9 @@
         {% if prediction %}
         <h2>Movement: {{ prediction }}!</h2>
         {% endif %}
+        {% if URL %}
+        <h2>URL: {{ URL }}</h2>
+        {% endif %}
         {% if filename %}
         <h2>{{ 'Were we correct?' }}</h2>
         <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
