--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -7,7 +7,7 @@
         {% if prediction %}
         <h2>Movement: {{ prediction }}!</h2>
         {% endif %}
-        {% if URL %}
+        {% if ArtURL %}
         <h2>URL: {{ URL }}</h2>
         {% endif %}
         {% if filename %}
