--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -8,7 +8,7 @@
         <h2>Movement: {{ prediction }}!</h2>
         {% endif %}
         {% if ArtURL %}
-        <h2>URL: {{ URL }}</h2>
+        <h2>URL: {{ ArtURL }}</h2>
         {% endif %}
         {% if filename %}
         <h2>{{ 'Were we correct?' }}</h2>
