Doing Different Stuff

--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -21,7 +21,7 @@
 
     <header class="major container medium">
         {% if similar %}
-        <a href={{similar}}><h2>See <br> Similar <br> Artwork!</h2></a>
+        <button href={{similar}}>See Similar Artwork!</button>
         {% endif %}
         <br>
         <a href="javascript:history.back()"><h2>Try <br> Another <br> Artwork!</h2></a>
