Adding formatting for UI enhancement

--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -20,10 +20,15 @@
     </div>
 
     <header class="major container medium">
+        <style>
+            a:hover {
+            background-color: yellow;
+            }
+        </style>
         {% if similar %}
-        <button href={{similar}}>See Similar Artwork!</button>
+        <a href={{similar}}><h2>See <br> Similar <br> Artwork!</h2></a>
         {% endif %}
-        <br>
+        <br> <br>
         <a href="javascript:history.back()"><h2>Try <br> Another <br> Artwork!</h2></a>
     </header>
     <br> <br>
