--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -8,7 +8,12 @@
         {% endif %}
 
         {% if era %}
-        <h2>Era: {{ era }}</h2>
+        <h3>Era: {{ era }}</h3>
+        {% endif %}
+        
+        {% if filename %}
+        <!--<img src="{{ url_for('get_file', filename=filename) }}">-->
+        <center><img src="/static/{{ url_for('get_file', filename=filename) }}" width = auto  height = 400></center>
         {% endif %}
     </div>
 
