Adding formatting for UI enhancement

--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -1,7 +1,7 @@
     <!doctype html>
     <title>Art By Era</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
-    
+    <h2>Keep Scrolling For More Information</h2>
     <div id="header">
         {% if prediction %}
         <h1>Movement: {{ prediction }}!</h1>
