--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -23,7 +23,7 @@
         <a href={{similar}} rel="noopener noreferrer" target="_blank"><h2>Click For <br> Similar <br> Artwork!</h2></a>
         {% endif %}
         <br> <br>
-        <a href="javascript:history.back()"><h2>Try <br> Another <br> Artwork!</h2></a>
+        <a href="http://ec2-34-203-209-171.compute-1.amazonaws.com/#"><h2>Try <br> Another <br> Artwork!</h2></a>
     </header>
     <br> <br>
 
