Adding formatting for UI enhancement

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 
       <!-- Header -->
         <div id="header">
-          <span class="logo icon fa-clock-o"></span>
+          <span class="logo icon fa-paint-brush"></span>
           <h1>Hi. This is Art-By-Era.</h1>
           <p>Upload an artwork and we'll tell you its movement and era!</a></p>
           <p>There are only two steps!</p>  
