--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
     <!doctype html>
     <title>Art By Era</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
-
+    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
     <body class="is-preload">
 
       <!-- Header -->
