--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -1,6 +1,7 @@
     <!doctype html>
     <title>Art By Era</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
+    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
     <br>
     <h4>Keep Scrolling For More Information</h4>
     <div id="header">
