--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -20,10 +20,10 @@
 
     <header class="major container medium">
         {% if similar %}
-        <a href={{similar}} rel="noopener noreferrer" target="_blank"><h2>Click For <br> Similar <br> Artwork!</h2></a>
+        <p><a href={{similar}} rel="noopener noreferrer" target="_blank"><h2>Click For <br> Similar <br> Artwork!</h2></a></p>
         {% endif %}
         <br> <br>
-        <a href="http://ec2-34-203-209-171.compute-1.amazonaws.com/"><h2>Try <br> Another <br> Artwork!</h2></a>
+        <p><a href="http://ec2-34-203-209-171.compute-1.amazonaws.com/"><h2>Try <br> Another <br> Artwork!</h2></a></p>
     </header>
     <br> <br>
 
