--- a/app/templates/displayResult.html
+++ b/app/templates/displayResult.html
@@ -14,7 +14,7 @@
         {% endif %}
         
         {% if filename %}
-        <center><img src="/static/{{ url_for('get_file', filename=filename) }}" width = auto  height = 400></center>
+        <center><img src="/static/{{ url_for('get_file', filename=filename) }}" width = auto  height = auto></center>
         {% endif %}
     </div>
 
