--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
           <br />
           <br />
           1. <input type=file name=file>
+          If you take a picture, make sure it's lined up.
           <br />
           <br />
           2. <input type=submit value=Upload>
