--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,11 @@
           <p>There are only two steps!</p>  
         </div>
         <center>
+          Results are better if the painting fills the whole frame. <br>
         <form method=post enctype=multipart/form-data>
           <br />
           <br />
           1. <input type=file name=file>
-          If you take a picture, make sure it's lined up.
           <br />
           <br />
           2. <input type=submit value=Upload>
