Finishing formatting of mobile

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,6 @@
           <p>There are only two steps!</p>  
         </div>
         <center>
-          Results are better if the painting fills the whole frame. <br>
         <form method=post enctype=multipart/form-data>
           <br />
           <br />
@@ -21,6 +20,7 @@
           <br />
           2. <input type=submit value=Upload>
         </form>
+        Results are better if the painting fills the whole frame. 
        </center>
       <!-- Main -->
         <div id="main">
